syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "proto/secrets";

package proto;

message Password {
  string name = 1;
  string login = 2;
  string password = 3;
  string metadata = 4;
  string id = 5;
  string user = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CardInfo {
  string name = 1;
  string number = 2;
  string expiration_month = 3;
  string expiration_year = 4;
  string cvv = 5;
  string metadata = 6;
  string id = 7;
  string user = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message TextInfo {
  string name = 1;
  string text = 2;
  string metadata = 3;
  string id = 4;
  string user = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message BinaryInfo {
  string name = 1;
  string data = 2;
  string metadata = 3;
  string id = 4;
  string user = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message AddResponse {
  string id = 1; // id of added item
  string error = 2;
}

message EmptyRequest{}

message ListSecretResponse {
    repeated Password passwords = 1;
    repeated TextInfo texts = 2;
    repeated CardInfo cards = 3;
    repeated BinaryInfo bins = 4;
    string error = 5;
}

message GetSecretRequest {
  string id = 1;
}

message GetCredentialsResponse {
  Password password = 1;
  string error = 2;
}

message GetCardResponse {
  CardInfo card = 1;
  string error = 2;
}

message GetTextResponse {
  TextInfo text = 1;
  string error = 2;
}

message GetBinaryResponse {
  BinaryInfo bin = 1;
  string error = 2;
}

message EmptyResponse {}

service SecretsManagement {
  rpc AddCredentials(Password) returns (AddResponse);
  rpc AddCardInfo(CardInfo) returns (AddResponse);
  rpc AddTextInfo (TextInfo) returns (AddResponse);
  rpc AddBinaryInfo (BinaryInfo) returns (AddResponse);

  rpc ListSecrets(EmptyRequest) returns (ListSecretResponse);

  rpc GetCredentialsByID(GetSecretRequest) returns (GetCredentialsResponse);
  rpc GetCardByID(GetSecretRequest) returns (GetCardResponse);
  rpc GetTextByID(GetSecretRequest) returns (GetTextResponse);
  rpc GetBinaryByID(GetSecretRequest) returns (GetBinaryResponse);

  rpc UpdateCredentials(Password) returns (EmptyResponse);
  rpc UpdateCardInfo(CardInfo) returns (EmptyResponse);
  rpc UpdateTextInfo(TextInfo) returns (EmptyResponse);
  rpc UpdateBinaryInfo(BinaryInfo) returns (EmptyResponse);
}
